# HobbyRaytracer

./: .gitmodules  CMakeLists.txt  README.md  RaytracingInOneWeekend.sln
RaytracingInOneWeekend/: RaytracingInOneWeekend.vcxproj  RaytracingInOneWeekend.vcxproj.filters  aabb.h  box.h  bvh.cpp  bvh.h  camera.h  constantMedium.cpp  constantMedium.h  hittable.h  hittableList.cpp  hittableList.h  main.cpp  material.cpp  material.h  rotateY.cpp  rotateY.h  sphere.cpp  sphere.h  stdafx.h  texture.cpp  translate.cpp  translate.h
hobbyraytracer/: CMakeLists.txt  aabb.h  aarect.h  box.h  bvh.cpp  bvh.h  camera.h  constantMedium.cpp  constantMedium.h  film.cpp  film.h  hittable.h  hittableList.cpp  hittableList.h  hobbyraytracer.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  ray.h  rotateQuat.cpp  rotateQuat.h  rotateY.cpp  rotateY.h  scale.cpp  scale.h  scene.cpp  scene.h  sphere.cpp  sphere.h  texture.cpp  texture.h  translate.cpp  translate.h  triangle.cpp  triangle.h
sampleScenes/: shiny_teapot.yaml  teapot_scene.yaml
